<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:text="@string/select_timer1_duration_1"/>

        <mobi.upod.timedurationpicker.TimeDurationPicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timeDurationPickerDoubleTimerTimer1"
            android:layout_gravity="center_horizontal"
            app:numPadButtonPadding="0dp"
            app:timeUnits="hhmmss"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:text="@string/select_timer1_state_2"/>

        <ToggleButton android:id="@+id/toggleBtnDoubleTimerTimer1State"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checked="true"
            android:textOff="@string/stateOFF"
            android:textOn="@string/stateON"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:text="@string/select_timer2_duration_3"/>

        <mobi.upod.timedurationpicker.TimeDurationPicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timeDurationPickerDoubleTimerTimer2"
            android:layout_gravity="center_horizontal"
            app:numPadButtonPadding="0dp"
            app:timeUnits="hhmmss"/>

        <TextView android:id="@+id/txtViewDoubleTimerTimer2State"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:text="@string/show_timer2_duration_state"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:id="@+id/txtViewToggleTimerCount"
            android:text="@string/double_timer_count_5"/>

        <EditText
            android:id="@+id/editTextCombinedTimer1Timer2Count"
            android:digits="0123456789"
            android:hint="@string/enter_combined_timer1_timer2_count"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView android:id="@+id/txtViewDoubleTimerTimer1Count"
                  android:text="@string/txtViewDoubleTimerTimer1Count"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

        <TextView android:id="@+id/txtViewDoubleTimerTimer2Count"
                  android:text="@string/txtViewDoubleTimerTimer2Count"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>