<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtViewChargingAutoTurnOffUnavailable"
        android:text="@string/charging_auto_turn_off_unavailable_for_fixed_sockets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/chkboxChargingAutoTurnOff"
        android:text="@string/charging_auto_turn_off_msg"
        android:checked="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/seekbarSetAutoTurnBatteryPercent"
        android:progress="50"
        android:max="50"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/chkboxDisableWiFiOnceCharged"
        android:text="@string/chkboxDisableWiFiOnceCharged_text"
        android:checked="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/txtViewDoubleTimerUnavailable"
        android:text="@string/no_socket_selected_for_double_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnActivateStopDoubleTimer"
        android:text="@string/btn_activate_stop_double_timer_activate"
        android:background="@drawable/rounded_corner_button"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>