<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="in.co.unifytech.socket.SmartWiFiSocketActivity">

    <TextView
        android:id="@+id/txtViewLatestListNotRetrievedOrAdviseMsg"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_schedule_timer_entries_found"/>

    <!--<include
        android:id="@+id/cardViewOneShotCurrentTimer"
        android:visibility="visible"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/fragment_schedule_list_item_card_view" />-->

    <CheckBox
        android:id="@+id/chkBoxShowMoreOptions"
        android:text="@string/chkBoxShowMoreOptions"
        android:layout_marginTop="11dp"
        android:checked="false"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/chkBoxShowOnlyTodaysScheduleTimers"
        android:text="@string/show_only_todays_schedule_timers"
        android:layout_marginTop="5dp"
        android:checked="false"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnUpdateRunSkipForTodaysSchedule"
        android:text="@string/btnUpdateRunSkipForTodaysSchedule"
        android:textAllCaps="false"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:background="@drawable/rounded_corner_button"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnUpdateEnabledScheduleTimers"
        android:text="@string/btnUpdateEnabledScheduleTimers"
        android:textAllCaps="false"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_corner_button"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnRemovePastScheduleTimerEntries"
        android:text="@string/btnRemovePastScheduleTimerEntries"
        android:textAllCaps="false"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_corner_button"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listViewOtherScheduleAndTimers"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
